--- a/dev/templates/learning-mode-2.html
+++ b/dev/templates/learning-mode-2.html
@@ -26,9 +26,7 @@
                         <!-- frames -->
                         <div class="pick-schedule-content-frame">
                             <div class="pick-schedule-content-frame-title">
-                                Обучение включает в себя две сессии,
-                                когда вам нужно будет присутствовать
-                                на занятиях лично, и 2 недели вебинаров
+                                Обучение и сертификация за 8 700 рублей
                             </div>
                             <p class="marg">Обучение включает в себя две сессии, когда вам
                                 нужно будет присутствовать на занятиях лично,
