--- a/dev/templates/learning-mode.html
+++ b/dev/templates/learning-mode.html
@@ -22,6 +22,7 @@
 
                         <div class="pick-schedule-content">
                             <!-- frames -->
+
                             <label for="check_mode_free" class="toggle-variant-wrap">
                                 <input type="radio" class="js-other-btn-name" id="check_mode_free" name="check_mode" value="free">
                                 <div class="pick-schedule-content-frame toggle-variant-item">
@@ -72,7 +73,7 @@
 
                                 <label for="check_meeting" class="toggle-variant-wrap mod-half">
                                     <input type="checkbox" id="check_meeting" name="check_meeting" value="check_meeting">
-                                    <div class="pick-schedule-content-frame toggle-variant-item">
+                                    <div class="pick-schedule-content-frame toggle-variant-item mod-small">
                                         <div class="pick-schedule-content-frame-title">
                                             Личные встречи - 1 200 рублей
                                         </div>
@@ -86,7 +87,7 @@
 
                                 <label for="check_tutor" class="toggle-variant-wrap mod-half">
                                     <input type="checkbox" id="check_tutor" name="check_tutor" value="check_tutor">
-                                    <div class="pick-schedule-content-frame toggle-variant-item">
+                                    <div class="pick-schedule-content-frame toggle-variant-item mod-small">
                                         <div class="pick-schedule-content-frame-title">
                                             Личный тьютор - 1 200 рублей
                                         </div>
