--- a/dev/templates/learning-mode.html
+++ b/dev/templates/learning-mode.html
@@ -14,8 +14,8 @@
             <div class="wrapper-modal">
 
 
-                <label class="wrap-win pick-schedule" >
-                    <form action="" method="">
+                <div class="wrap-win pick-schedule">
+                    <form action="#">
                         <div class="modal-title">
                             Выберите режим обучения и дополнительные возможности
                         </div>
@@ -23,7 +23,8 @@
                         <div class="pick-schedule-content">
                             <!-- frames -->
                             <label for="check_mode_free" class="toggle-variant-wrap">
-                                <input type="radio" class="js-other-btn-name" id="check_mode_free" name="check_mode" value="free">
+                                <input type="radio" class="js-other-btn-name" id="check_mode_free" name="check_mode"
+                                       value="free">
                                 <div class="pick-schedule-content-frame toggle-variant-item">
                                     <div class="pick-schedule-content-frame-title">
                                         Бесплатный просмотр
@@ -34,7 +35,6 @@
                                 </div>
                                 <span class="select-check">Выбрано<i class="ico ico-g-gal"></i></span>
                             </label>
-
 
 
                             <div class="clear-fix pick-schedule-group">
@@ -54,8 +54,9 @@
                                 </label>
 
                                 <label for="check_webinar" class="toggle-variant-wrap mod-half">
-                                    <input type="checkbox" id="check_webinar" name="check_webinar" value="check_webinar">
-                                    <div class="pick-schedule-content-frame mod-large toggle-variant-item" >
+                                    <input type="checkbox" id="check_webinar" name="check_webinar"
+                                           value="check_webinar">
+                                    <div class="pick-schedule-content-frame mod-large toggle-variant-item">
                                         <div class="pick-schedule-content-frame-title">
                                             Участие в вебинарах
                                         </div>
@@ -67,11 +68,12 @@
                                             1 200 рублей
                                         </div>
                                     </div>
-                                  <span class="select-check">Выбрано<i class="ico ico-g-gal"></i></span>
+                                    <span class="select-check">Выбрано<i class="ico ico-g-gal"></i></span>
                                 </label>
 
                                 <label for="check_meeting" class="toggle-variant-wrap mod-half">
-                                    <input type="checkbox" id="check_meeting" name="check_meeting" value="check_meeting">
+                                    <input type="checkbox" id="check_meeting" name="check_meeting"
+                                           value="check_meeting">
                                     <div class="pick-schedule-content-frame toggle-variant-item">
                                         <div class="pick-schedule-content-frame-title">
                                             Личные встречи - 1 200 рублей
@@ -81,7 +83,7 @@
 
                                         </p>
                                     </div>
-                                  <span class="select-check">Выбрано<i class="ico ico-g-gal"></i></span>
+                                    <span class="select-check">Выбрано<i class="ico ico-g-gal"></i></span>
                                 </label>
 
                                 <label for="check_tutor" class="toggle-variant-wrap mod-half">
@@ -94,11 +96,10 @@
                                             Поможет понять все трудные моменты, даст пояснения и обратную связь
                                         </p>
                                     </div>
-                                  <span class="select-check">Выбрано<i class="ico ico-g-gal"></i></span>
+                                    <span class="select-check">Выбрано<i class="ico ico-g-gal"></i></span>
                                 </label>
 
                             </div>
-
 
 
                             <!-- end frames -->
@@ -112,17 +113,16 @@
                         </button>
                     </form>
                 </div>
-
-
             </div>
         </div>
     </div>
+</div>
 
-    <!-- build:section layout.footer -->
-    <!-- /build -->
+<!-- build:section layout.footer -->
+<!-- /build -->
 
-    <!-- build:section layout.modal -->
-    <!-- /build -->
+<!-- build:section layout.modal -->
+<!-- /build -->
 
 </div>
 
