--- a/dev/sass/pages/course.sass
+++ b/dev/sass/pages/course.sass
@@ -166,11 +166,10 @@
         span
           display: block
           margin-top: 6px
-          color: rgba(white, .5)
+          color: white
           font-size: 12px
           img
             vertical-align: middle
-            opacity: .5
 
     .price
       margin: 20px 0
