--- a/css/style.css
+++ b/css/style.css
@@ -892,8 +892,7 @@ body, input, button, select, textarea {
 .clear {
   clear: both; }
 
-.container:after, .container-fluid:after, .row:after, .el-check-group.mod-horizontal:after, .el-progress-wrap:after, .tag-filter-wrap:after, .sign-social:after, .header .user-page-link:after, .footer .contact-link:after, .footer .contact-link a.css-color:after, .footer .navigation-list:after, .home-page .section-1 .tab-catalog:after, .home-page .section-1 .wrap-drop:after, .home-page .section-4 .wrap-banner:after, .home-page .carousel .owl-nav:after, .page-content.right-sidebar .content-wrap .sidebar:after, .page-content .sidebar .title-rating:after, .page-content .partner:after, .page-content .list-style-1:after, .page-content .colon-section:after, .page-content .col-center .list-style-2 > li:after, .page-content .course-section:after, .page-content .rating-section:after, .page-content .comment-wrap:after, .page-content .partner-section .owl-nav:after,
-.page-content .lecturer-wrap .owl-nav:after, .page-content .branches-section ul:after, .page-content .branches-section li:after, .page-content .necessary-section:after, .page-content .necessary-section .necessary ul:after, .page-content .competence-section .skill li:after, .page-content .competence-section .skill-nav:after, .page-content .competence-section .right-competence .title:after, .page-content .academic-plan .progress-wrap:after, .page-content .academic-plan .specialization:after, .tabs:after, .carts-section:after, .carts-section .skill li:after, .carts-section .skill .progress-wrap:after, .carts-section .necessary ul:after, .certificate-section .certificate .all-courses:after, .certificate-section .certificate li:after, .personal-page .page-content.left-sidebar .content-wrap .sidebar:after, .personal-page .page-content .skill li:after, .personal-page .page-content .skill-nav:after, .personal-page .page-content .right-competence .title:after, .personal-page .page-content .border-block:after, .personal-page .page-content .section-2 .skill-nav:after, .personal-page .page-content .section-5 .partner-lists:after, .personal-page .page-content .wrap-list-process:after, .personal-page .page-content .wrap-list-process .item-list-process:after, .home-page.css-home .section-subscribe .wrap-banner:after, .home-page.css-home .section-tabs .tabs:after, .home-page.css-home .section-tabs .tabgroup .wrapper-tabs-item:after, .clear-fix:after {
+.container:after, .container-fluid:after, .row:after, .el-check-group.mod-horizontal:after, .el-progress-wrap:after, .tag-filter-wrap:after, .sign-social:after, .header .user-page-link:after, .footer .contact-link:after, .footer .contact-link a.css-color:after, .footer .navigation-list:after, .home-page .section-1 .tab-catalog:after, .home-page .section-1 .wrap-drop:after, .home-page .section-4 .wrap-banner:after, .home-page .carousel .owl-nav:after, .page-content.right-sidebar .content-wrap .sidebar:after, .page-content .sidebar .title-rating:after, .page-content .partner:after, .page-content .list-style-1:after, .page-content .colon-section:after, .page-content .col-center .list-style-2 > li:after, .page-content .course-section:after, .page-content .rating-section:after, .page-content .comment-wrap:after, .page-content .partner-section .owl-nav:after, .page-content .branches-section ul:after, .page-content .branches-section li:after, .page-content .necessary-section:after, .page-content .necessary-section .necessary ul:after, .page-content .competence-section .skill li:after, .page-content .competence-section .skill-nav:after, .page-content .competence-section .right-competence .title:after, .page-content .academic-plan .progress-wrap:after, .page-content .academic-plan .specialization:after, .tabs:after, .carts-section:after, .carts-section .skill li:after, .carts-section .skill .progress-wrap:after, .carts-section .necessary ul:after, .certificate-section .certificate .all-courses:after, .certificate-section .certificate li:after, .personal-page .page-content.left-sidebar .content-wrap .sidebar:after, .personal-page .page-content .skill li:after, .personal-page .page-content .skill-nav:after, .personal-page .page-content .right-competence .title:after, .personal-page .page-content .border-block:after, .personal-page .page-content .section-2 .skill-nav:after, .personal-page .page-content .section-5 .partner-lists:after, .personal-page .page-content .wrap-list-process:after, .personal-page .page-content .wrap-list-process .item-list-process:after, .static-page .lecturer-wrap .owl-nav:after, .home-page.css-home .section-subscribe .wrap-banner:after, .home-page.css-home .section-tabs .tabs:after, .home-page.css-home .section-tabs .tabgroup .wrapper-tabs-item:after, .clear-fix:after {
   content: "";
   clear: both;
   display: table;
@@ -4177,11 +4176,10 @@ html .ui-button.ui-state-disabled:active {
         .page-content .sidebar .wrap-btn .el-btn span {
           display: block;
           margin-top: 6px;
-          color: rgba(255, 255, 255, 0.5);
+          color: white;
           font-size: 12px; }
           .page-content .sidebar .wrap-btn .el-btn span img {
-            vertical-align: middle;
-            opacity: 0.5; }
+            vertical-align: middle; }
     .page-content .sidebar .price {
       margin: 20px 0;
       color: black;
@@ -4662,20 +4660,16 @@ html .ui-button.ui-state-disabled:active {
   color: black;
   font: 400 18px/36px "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif; }
 
-.page-content .partner-section .owl-controls,
-.page-content .lecturer-wrap .owl-controls {
+.page-content .partner-section .owl-controls {
   position: absolute;
   top: 50%;
-  right: -90px;
-  left: -90px;
+  right: 0;
+  left: 0;
   margin-top: -28px;
   height: 0; }
-.page-content .partner-section .owl-nav,
-.page-content .lecturer-wrap .owl-nav {
+.page-content .partner-section .owl-nav {
   height: 0; }
-.page-content .partner-section .owl-prev, .page-content .partner-section .owl-next,
-.page-content .lecturer-wrap .owl-prev,
-.page-content .lecturer-wrap .owl-next {
+.page-content .partner-section .owl-prev, .page-content .partner-section .owl-next {
   width: 56px;
   height: 56px;
   border: 1px solid #4a72f5;
@@ -4687,18 +4681,13 @@ html .ui-button.ui-state-disabled:active {
   opacity: 0.3;
   cursor: pointer;
   transition: all 0.12s ease; }
-  .page-content .partner-section .owl-prev:hover, .page-content .partner-section .owl-next:hover,
-  .page-content .lecturer-wrap .owl-prev:hover,
-  .page-content .lecturer-wrap .owl-next:hover {
+  .page-content .partner-section .owl-prev:hover, .page-content .partner-section .owl-next:hover {
     opacity: 1; }
-.page-content .partner-section .owl-prev,
-.page-content .lecturer-wrap .owl-prev {
+.page-content .partner-section .owl-prev {
   float: left; }
-.page-content .partner-section .owl-next,
-.page-content .lecturer-wrap .owl-next {
+.page-content .partner-section .owl-next {
   float: right; }
-  .page-content .partner-section .owl-next .icon-arrow-l:before,
-  .page-content .lecturer-wrap .owl-next .icon-arrow-l:before {
+  .page-content .partner-section .owl-next .icon-arrow-l:before {
     -webkit-transform: rotate(180deg);
         -ms-transform: rotate(180deg);
             transform: rotate(180deg); }
@@ -4834,6 +4823,15 @@ html .ui-button.ui-state-disabled:active {
     .page-content .competence-section .skill li {
       padding: 15px 30px;
       transition: all 0.12s ease; }
+      .page-content .competence-section .skill li.active {
+        background-color: #4a72f5; }
+        .page-content .competence-section .skill li.active .skill-nav {
+          opacity: 1;
+          visibility: visible; }
+        .page-content .competence-section .skill li.active .name {
+          color: white; }
+        .page-content .competence-section .skill li.active .el-progress-wrap .prosent {
+          color: white; }
       .page-content .competence-section .skill li:hover {
         background-color: #4a72f5;
         cursor: pointer; }
@@ -5407,6 +5405,15 @@ html .ui-button.ui-state-disabled:active {
     .personal-page .page-content .skill li {
       padding: 15px 30px;
       transition: all 0.12s ease; }
+      .personal-page .page-content .skill li.active {
+        background-color: #4a72f5; }
+        .personal-page .page-content .skill li.active .skill-nav {
+          opacity: 1;
+          visibility: visible; }
+        .personal-page .page-content .skill li.active .name {
+          color: white; }
+        .personal-page .page-content .skill li.active .el-progress-wrap .prosent {
+          color: white; }
       .personal-page .page-content .skill li:hover {
         background-color: #4a72f5;
         cursor: pointer; }
@@ -5599,14 +5606,21 @@ html .ui-button.ui-state-disabled:active {
     margin-top: 28px;
     margin-bottom: 10px;
     padding: 25px 30px;
-    border: 1px solid #4a72f5;
+    border: 1px solid rgba(74, 114, 245, 0.1);
     box-sizing: border-box; }
-    .personal-page .page-content .border-block.css-gren {
-      border-color: rgba(74, 114, 245, 0.1); }
+    .personal-page .page-content .border-block:hover {
+      border-color: #4a72f5; }
+      .personal-page .page-content .border-block:hover .el-btn {
+        visibility: visible;
+        opacity: 1; }
     .personal-page .page-content .border-block.css-pur {
       border-color: #fb5570; }
+      .personal-page .page-content .border-block.css-pur:hover {
+        border-color: #fb5570; }
     .personal-page .page-content .border-block .el-btn {
-      float: right; }
+      float: right;
+      visibility: hidden;
+      opacity: 0; }
       .personal-page .page-content .border-block .el-btn.delete {
         margin-top: 14px; }
       .personal-page .page-content .border-block .el-btn.give {
@@ -6094,6 +6108,40 @@ html .ui-button.ui-state-disabled:active {
       .static-page .lecturer-wrap .social li a.gplus:hover {
         background-color: transparent;
         color: #fb5570; }
+.static-page .lecturer-wrap .owl-controls {
+  position: absolute;
+  top: 50%;
+  right: -90px;
+  left: -90px;
+  margin-top: -28px;
+  height: 0; }
+.static-page .lecturer-wrap .owl-nav {
+  height: 0; }
+.static-page .lecturer-wrap .owl-prev, .static-page .lecturer-wrap .owl-next {
+  width: 56px;
+  height: 56px;
+  border: 1px solid #4a72f5;
+  border-radius: 100%;
+  color: #4a72f5;
+  text-align: center;
+  font-size: 20px;
+  line-height: 54px;
+  opacity: 0.3;
+  cursor: pointer;
+  transition: all 0.12s ease; }
+  .static-page .lecturer-wrap .owl-prev:hover, .static-page .lecturer-wrap .owl-next:hover {
+    opacity: 1; }
+.static-page .lecturer-wrap .owl-prev {
+  float: left; }
+.static-page .lecturer-wrap .owl-next {
+  float: right; }
+  .static-page .lecturer-wrap .owl-next .icon-arrow-l:before {
+    -webkit-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+            transform: rotate(180deg); }
+.static-page .lecturer-wrap .owl-stage-outer {
+  margin: 0 -20px 50px;
+  padding: 0 20px; }
 
 .home-page.css-home .section-7 .btn-wraps {
   margin: 0 0 40px; }
