--- a/dev/sass/pages/static-page.sass
+++ b/dev/sass/pages/static-page.sass
@@ -243,3 +243,41 @@
           background-color: transparent
           color: #fb5570
 
+  .lecturer-wrap
+    .owl-controls
+      position: absolute
+      top: 50%
+      right: -90px
+      left: -90px
+      margin-top: -28px
+      height: 0
+
+    .owl-nav
+      @extend %clear-fix
+      height: 0
+
+    .owl-prev, .owl-next
+      width: 56px
+      height: 56px
+      border: 1px solid #4a72f5
+      border-radius: 100%
+      color: #4a72f5
+      text-align: center
+      font-size: 20px
+      line-height: 54px
+      opacity: 0.3
+      cursor: pointer
+      transition: all .12s ease
+      &:hover
+        opacity: 1
+
+    .owl-prev
+      float: left
+    .owl-next
+      float: right
+      .icon-arrow-l:before
+        transform: rotate(180deg)
+
+    .owl-stage-outer
+      margin: 0 -20px 50px
+      padding: 0 20px
